--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["scikit-build-core[pyproject]>=0.9.2"]
+requires = ["scikit-build-core[pyproject]>=0.10.7"]
 build-backend = "scikit_build_core.build"
 
 [project]
@@ -26,10 +26,10 @@ classifiers = [
 
 [tool.scikit-build]
 wheel.packages = ["gadget"]
-cmake.verbose = true
-cmake.minimum-version = "3.21"
-minimum-version = "0.5.1"
-sdist.include = [".git", "ggml/.git"]
+build.verbose = true
+minimum-version = "0.10.7"
+sdist.exclude = ["ggml/examples"]
+wheel.exclude = ["ggml"]
 
 [tool.scikit-build.metadata.version]
 provider = "scikit_build_core.metadata.regex"
